src/edu/simplepascal/antlr/SimplePascalParser.java
// Generated from SimplePascal.g4 by ANTLR 4.1

  package edu.simplepascal.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimplePascalParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, COM=2, COL=3, SCOL=4, ASSIGN=5, OPAR=6, CPAR=7, PLUS=8, MINUS=9, 
		MULT=10, DIV=11, MOD=12, EQ=13, NEQ=14, GT=15, LT=16, GTEQ=17, LTEQ=18, 
		OR=19, XOR=20, AND=21, NOT=22, SHL=23, SHR=24, PROG=25, BEGIN=26, END=27, 
		VAR=28, TRUE=29, FALSE=30, NIL=31, IF=32, OF=33, TO=34, DO=35, THEN=36, 
		ELSE=37, FOR=38, WHILE=39, CASE=40, REPEAT=41, UNTIL=42, READ=43, WRITE=44, 
		T_INT=45, T_REAL=46, T_BOOL=47, T_STR=48, FN_INC=49, FN_DEC=50, FN_SIN=51, 
		FN_COS=52, FN_TAN=53, FN_ATAN=54, FN_SQRT=55, FN_POW=56, FN_EXP=57, FN_LN=58, 
		FN_LEN=59, FN_CNCT=60, FN_DEL=61, FN_CPY=62, ID=63, INT=64, FLOAT=65, 
		STRING=66, COMMENT=67, SPACE=68, OTHER=69;
	public static final String[] tokenNames = {
		"<INVALID>", "'.'", "','", "':'", "';'", "':='", "'('", "')'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'='", "'<>'", "'>'", "'<'", "'>='", "'<='", 
		"'or'", "'xor'", "'and'", "'not'", "'shl'", "'shr'", "'program'", "'begin'", 
		"'end'", "'var'", "'true'", "'false'", "'nil'", "'if'", "'of'", "'to'", 
		"'do'", "'then'", "'else'", "'for'", "'while'", "'case'", "'repeat'", 
		"'until'", "'read'", "'write'", "'integer'", "'real'", "'boolean'", "'string'", 
		"'inc'", "'dec'", "'sin'", "'cos'", "'tan'", "'atan'", "'sqrt'", "'power'", 
		"'exp'", "'ln'", "'length'", "'concat'", "'delete'", "'copy'", "ID", "INT", 
		"FLOAT", "STRING", "COMMENT", "SPACE", "OTHER"
	};
	public static final int
		RULE_program = 0, RULE_varDeclSection = 1, RULE_varDecl = 2, RULE_block = 3, 
		RULE_statement = 4, RULE_assignment = 5, RULE_ifStatement = 6, RULE_caseStatement = 7, 
		RULE_conditionBlockIf = 8, RULE_conditionBlockCase = 9, RULE_blockOrStatement = 10, 
		RULE_whileStatement = 11, RULE_repeatStatement = 12, RULE_forStatement = 13, 
		RULE_writeStatement = 14, RULE_readStatement = 15, RULE_funcCallStatement = 16, 
		RULE_expr = 17, RULE_term = 18, RULE_argList = 19, RULE_funcCall = 20, 
		RULE_incFunCall = 21, RULE_mathFunCall = 22, RULE_trigFunCall = 23, RULE_strFunCall = 24;
	public static final String[] ruleNames = {
		"program", "varDeclSection", "varDecl", "block", "statement", "assignment", 
		"ifStatement", "caseStatement", "conditionBlockIf", "conditionBlockCase", 
		"blockOrStatement", "whileStatement", "repeatStatement", "forStatement", 
		"writeStatement", "readStatement", "funcCallStatement", "expr", "term", 
		"argList", "funcCall", "incFunCall", "mathFunCall", "trigFunCall", "strFunCall"
	};

	@Override
	public String getGrammarFileName() { return "SimplePascal.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimplePascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROG() { return getToken(SimplePascalParser.PROG, 0); }
		public TerminalNode DOT() { return getToken(SimplePascalParser.DOT, 0); }
		public TerminalNode ID() { return getToken(SimplePascalParser.ID, 0); }
		public VarDeclSectionContext varDeclSection() {
			return getRuleContext(VarDeclSectionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(PROG);
			setState(51); match(ID);
			setState(53);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(52); varDeclSection();
				}
			}

			setState(55); block();
			setState(56); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclSectionContext extends ParserRuleContext {
		public TerminalNode COM(int i) {
			return getToken(SimplePascalParser.COM, i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public TerminalNode VAR() { return getToken(SimplePascalParser.VAR, 0); }
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public TerminalNode SCOL() { return getToken(SimplePascalParser.SCOL, 0); }
		public List<TerminalNode> COM() { return getTokens(SimplePascalParser.COM); }
		public VarDeclSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterVarDeclSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitVarDeclSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitVarDeclSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclSectionContext varDeclSection() throws RecognitionException {
		VarDeclSectionContext _localctx = new VarDeclSectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDeclSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(VAR);
			setState(59); varDecl();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COM) {
				{
				{
				setState(60); match(COM);
				setState(61); varDecl();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67); match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public Token type;
		public TerminalNode T_STR() { return getToken(SimplePascalParser.T_STR, 0); }
		public TerminalNode T_INT() { return getToken(SimplePascalParser.T_INT, 0); }
		public TerminalNode ID() { return getToken(SimplePascalParser.ID, 0); }
		public TerminalNode T_REAL() { return getToken(SimplePascalParser.T_REAL, 0); }
		public TerminalNode COL() { return getToken(SimplePascalParser.COL, 0); }
		public TerminalNode T_BOOL() { return getToken(SimplePascalParser.T_BOOL, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(ID);
			setState(70); match(COL);
			setState(71);
			((VarDeclContext)_localctx).type = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_INT) | (1L << T_REAL) | (1L << T_BOOL) | (1L << T_STR))) != 0)) ) {
				((VarDeclContext)_localctx).type = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode BEGIN() { return getToken(SimplePascalParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(SimplePascalParser.END, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); match(BEGIN);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 32)) & ~0x3f) == 0 && ((1L << (_la - 32)) & ((1L << (IF - 32)) | (1L << (FOR - 32)) | (1L << (WHILE - 32)) | (1L << (CASE - 32)) | (1L << (REPEAT - 32)) | (1L << (READ - 32)) | (1L << (WRITE - 32)) | (1L << (FN_INC - 32)) | (1L << (FN_DEC - 32)) | (1L << (FN_SIN - 32)) | (1L << (FN_COS - 32)) | (1L << (FN_TAN - 32)) | (1L << (FN_ATAN - 32)) | (1L << (FN_SQRT - 32)) | (1L << (FN_POW - 32)) | (1L << (FN_EXP - 32)) | (1L << (FN_LN - 32)) | (1L << (FN_LEN - 32)) | (1L << (FN_CNCT - 32)) | (1L << (FN_DEL - 32)) | (1L << (FN_CPY - 32)) | (1L << (ID - 32)) | (1L << (OTHER - 32)))) != 0)) {
				{
				{
				setState(74); statement();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Token OTHER;
		public TerminalNode OTHER() { return getToken(SimplePascalParser.OTHER, 0); }
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public CaseStatementContext caseStatement() {
			return getRuleContext(CaseStatementContext.class,0);
		}
		public FuncCallStatementContext funcCallStatement() {
			return getRuleContext(FuncCallStatementContext.class,0);
		}
		public WriteStatementContext writeStatement() {
			return getRuleContext(WriteStatementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ReadStatementContext readStatement() {
			return getRuleContext(ReadStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(93);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); assignment();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); ifStatement();
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 3);
				{
				setState(84); caseStatement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(85); whileStatement();
				}
				break;
			case REPEAT:
				enterOuterAlt(_localctx, 5);
				{
				setState(86); repeatStatement();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(87); forStatement();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 7);
				{
				setState(88); readStatement();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 8);
				{
				setState(89); writeStatement();
				}
				break;
			case FN_INC:
			case FN_DEC:
			case FN_SIN:
			case FN_COS:
			case FN_TAN:
			case FN_ATAN:
			case FN_SQRT:
			case FN_POW:
			case FN_EXP:
			case FN_LN:
			case FN_LEN:
			case FN_CNCT:
			case FN_DEL:
			case FN_CPY:
				enterOuterAlt(_localctx, 9);
				{
				setState(90); funcCallStatement();
				}
				break;
			case OTHER:
				enterOuterAlt(_localctx, 10);
				{
				setState(91); ((StatementContext)_localctx).OTHER = match(OTHER);
				System.err.println("unknown char: " + (((StatementContext)_localctx).OTHER!=null?((StatementContext)_localctx).OTHER.getText():null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(SimplePascalParser.ASSIGN, 0); }
		public TerminalNode ID() { return getToken(SimplePascalParser.ID, 0); }
		public TerminalNode SCOL() { return getToken(SimplePascalParser.SCOL, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(ID);
			setState(96); match(ASSIGN);
			setState(97); expr(0);
			setState(98); match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode ELSE(int i) {
			return getToken(SimplePascalParser.ELSE, i);
		}
		public List<TerminalNode> IF() { return getTokens(SimplePascalParser.IF); }
		public List<TerminalNode> ELSE() { return getTokens(SimplePascalParser.ELSE); }
		public TerminalNode IF(int i) {
			return getToken(SimplePascalParser.IF, i);
		}
		public List<ConditionBlockIfContext> conditionBlockIf() {
			return getRuleContexts(ConditionBlockIfContext.class);
		}
		public BlockOrStatementContext blockOrStatement() {
			return getRuleContext(BlockOrStatementContext.class,0);
		}
		public ConditionBlockIfContext conditionBlockIf(int i) {
			return getRuleContext(ConditionBlockIfContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(IF);
			setState(101); conditionBlockIf();
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(102); match(ELSE);
					setState(103); match(IF);
					setState(104); conditionBlockIf();
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(110); match(ELSE);
				setState(111); blockOrStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseStatementContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<ConditionBlockCaseContext> conditionBlockCase() {
			return getRuleContexts(ConditionBlockCaseContext.class);
		}
		public TerminalNode OF() { return getToken(SimplePascalParser.OF, 0); }
		public TerminalNode CASE() { return getToken(SimplePascalParser.CASE, 0); }
		public TerminalNode SCOL() { return getToken(SimplePascalParser.SCOL, 0); }
		public ConditionBlockCaseContext conditionBlockCase(int i) {
			return getRuleContext(ConditionBlockCaseContext.class,i);
		}
		public TerminalNode END() { return getToken(SimplePascalParser.END, 0); }
		public CaseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterCaseStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitCaseStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitCaseStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseStatementContext caseStatement() throws RecognitionException {
		CaseStatementContext _localctx = new CaseStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_caseStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(CASE);
			setState(115); expr(0);
			setState(116); match(OF);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (OPAR - 6)) | (1L << (TRUE - 6)) | (1L << (FALSE - 6)) | (1L << (NIL - 6)) | (1L << (ID - 6)) | (1L << (INT - 6)) | (1L << (FLOAT - 6)) | (1L << (STRING - 6)))) != 0)) {
				{
				{
				setState(117); conditionBlockCase();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123); match(END);
			setState(124); match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionBlockIfContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(SimplePascalParser.THEN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockOrStatementContext blockOrStatement() {
			return getRuleContext(BlockOrStatementContext.class,0);
		}
		public ConditionBlockIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionBlockIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterConditionBlockIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitConditionBlockIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitConditionBlockIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionBlockIfContext conditionBlockIf() throws RecognitionException {
		ConditionBlockIfContext _localctx = new ConditionBlockIfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conditionBlockIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); expr(0);
			setState(127); match(THEN);
			setState(128); blockOrStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionBlockCaseContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode COL() { return getToken(SimplePascalParser.COL, 0); }
		public BlockOrStatementContext blockOrStatement() {
			return getRuleContext(BlockOrStatementContext.class,0);
		}
		public ConditionBlockCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionBlockCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).enterConditionBlockCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePascalListener ) ((SimplePascalListener)listener).exitConditionBlockCase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplePascalVisitor ) return ((SimplePascalVisitor<? extends T>)visitor).visitConditionBlockCase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionBlockCaseContext conditionBlockCase() throws RecognitionException {
		ConditionBlockCaseContext _localctx = new ConditionBlockCaseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditionBlockCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); term();
			setState(131); match(COL);
			setState(132); blockOrStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
